OS X: Do not re-create tracking areas over and over again

NSTrackingInVisibleRect already makes sure that the tracking area
updates itself, so we only need to add our tracking area if it is
missing.

For some reason this also fixes that Qt mouse tracking was broken after
showing e.g. an embedded native WebView.

Task-number: QTBUG-21944
Change-Id: I8013517f474f18e44b1ddd411defe1b6e60f05bf
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@theqtcompany.com>